halka changes ani documentation add

--- a/BackendWebApp/templates/base.html
+++ b/BackendWebApp/templates/base.html
@@ -28,6 +28,9 @@
               <a href="/profile">Profile</a>
             </li>
             <li>
+              <a href="/sysinfo">Sys Info</a>
+            </li>
+            <li>
               <a href="{% url 'logout' %}">logout</a>
             </li>
           </ul>
